--- a/public_html/css/bracket.css
+++ b/public_html/css/bracket.css
@@ -1,4 +1,11 @@
 /*BRACKETS*/
+.bracket_container{
+	display: flex;
+	flex-direction: column;
+	justify-content: normal;
+	align-items: normal;
+        width: 100% !important;
+}
 .bracket_section {
 	display: flex;
 	flex-direction: row;
@@ -7,6 +14,7 @@
 	margin: 0;
 	color: white;
 	overflow: scroll;
+	width: 100%;
 }
 .bracket_column {
 	display: flex;
