--- a/public_html/css/navigation.css
+++ b/public_html/css/navigation.css
@@ -215,13 +215,11 @@ header * {
 .tournamentNavigation button:hover {
     background-color: #3F454C;
 }
-.fa-shield-alt,
-.fa-users,
-.fa-trophy,
-.fa-medal {
-    display: none;
-    margin: 0 10px;
+.navigation i{
+	display: none !important;
+	margin: 0 5px !important;
 }
+
 
 /* MOBILE RESPONSIVE */
 @media screen and (max-width: 1000px) {
@@ -232,11 +230,8 @@ header * {
 	    justify-content: center;
 	}
 
-    .fa-shield-alt,
-    .fa-users,
-    .fa-trophy,
-    .fa-medal {
-        display: block;
+    .navigation i{
+        display: block !important;
     }
 
 	.navigation.responsive {
@@ -256,13 +251,6 @@ header * {
 	}
 
     
-/*header nav>:first-child {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: inherit;
-}*/
     .navigation.responsive a:hover {
         background-color: #444857;
         border-bottom: none;
