--- a/public_html/css/navigation.css
+++ b/public_html/css/navigation.css
@@ -13,7 +13,6 @@ header {
     box-shadow: 0px -10px 30px #000;
     width: 100%;
     overflow: hidden;
-    margin-bottom: 50px;
     z-index: 999;
 }
 header * {
@@ -215,6 +214,10 @@ header * {
 .tournamentNavigation button:hover {
     background-color: #3F454C;
 }
+.name_icon{
+    position: static;
+    text-align: left;
+}
 .navigation i{
 	display: none !important;
 	margin: 0 5px !important;
@@ -336,5 +339,13 @@ header * {
         align-items: flex-start;
         font-size: 15px;
     }
+  .nameOf_tour {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+  }
+ .name_icon{
+	position: static;
+ }
 }
 
