--- a/public_html/css/match_lobby.css
+++ b/public_html/css/match_lobby.css
@@ -3,6 +3,7 @@
 	width: 700px;
 	border-top: 3px solid #61892F;
 	border-radius: 8px;
+	margin-top: 40px;
 }
 .match_lobby_info {
 	padding: 12px;
@@ -100,7 +101,7 @@
 
 /*MOBILE RESPNSIVE (VS)*/
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 1000px) {
  
 .match_lobby_player-img {
     width: 70px;
@@ -147,7 +148,7 @@
 
 .match_lobby_table {
 	width: 700px;
-	/*max-width: 700px;*/
+	max-width: 700px;
 }
 .match_lobby_table tbody {
 	box-shadow: 0px 5px 10px #131617;
@@ -200,9 +201,10 @@ table.match_lobby_table .col-5 {
 	display: none;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 1000px) {
 	.match_lobby {
 		width: 100%;
+		margin-top: 20px;
 	}
 	.match_lobby_framesBreaksPoits_table,
 	.match_lobby_table {
