--- a/public_html/css/club_create.css
+++ b/public_html/css/club_create.css
@@ -23,7 +23,7 @@
 	font-size: 25px;
 	text-transform: uppercase;
 }
-.data_field {
+.club_data_field {
 	display: flex;
 	flex-direction: column;
 	margin-bottom: 20px;
@@ -62,6 +62,6 @@
 	display: flex;
 	flex-direction: row;
 	justify-content: space-around;
-	margin-top: 20px;
+	margin: 20px auto;
 }
 
