--- a/public_html/css/club_create.css
+++ b/public_html/css/club_create.css
@@ -59,9 +59,10 @@
 }
 
 .club_form {
+	width: 100%;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-around;
-	margin: 20px auto;
+	margin: 20px auto 0 auto;
 }
 
