--- a/public_html/css/club_create.css
+++ b/public_html/css/club_create.css
@@ -66,3 +66,28 @@
 	margin: 20px auto 0 auto;
 }
 
+
+/*RESPONSIVE*/
+
+
+@media screen and (max-width: 700px) {
+	.club_box {
+		margin: 0 auto;
+		width: 100%;
+	}
+	.club_form {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		margin-top: 20px;
+	}
+	.club_data_field {
+		align-items: center;
+		margin-top: 30px;
+	}
+}
+
+
+
+
