--- a/public_html/css/club_create.css
+++ b/public_html/css/club_create.css
@@ -82,9 +82,12 @@
 		align-items: center;
 		margin-top: 20px;
 	}
+	.club_form button {
+		margin-top: 0;
+	}
 	.club_data_field {
 		align-items: center;
-		margin: 50px 0 0 0;
+		margin-top: 50px;
 	}
 }
 
