--- a/public_html/css/tournament_lobby.css
+++ b/public_html/css/tournament_lobby.css
@@ -34,6 +34,68 @@
     cursor: pointer;
 }
 
+
+/*CSS for playerRegisterFotm.php*/
+
+/* SELECT FORM STYLING */
+
+.player_admin_reg select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  appearance: none;
+  outline: 0;
+  box-shadow: none;
+  border: 0 !important;
+  background: #474B4F;
+  background-image: none;
+}
+/* Remove IE arrow */
+.player_admin_reg select::-ms-expand {
+  display: none;
+}
+/* Custom Select */
+.player_admin_reg {
+  position: relative;
+  display: flex;
+  line-height: 4;
+  background: #474B4F;
+  overflow: hidden;
+  border-radius: 4px;
+  width: 223px;
+  height: 38px;
+  border-left: 3px solid #61892F;
+  margin-bottom: 20px;
+  padding-left: 3px;
+  align-items: center;
+}
+.player_admin_reg select {
+  flex: 1;
+  padding: 0 .5em;
+  color: #fff;
+  cursor: pointer;
+  font-size: 15px;
+}
+/* Arrow */
+.player_admin_reg::after {
+  content: '\25BC';
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 0 10px;
+  background: #686D74;
+  cursor: pointer;
+  pointer-events: none;
+  font-size: 11px;
+}
+/* Transition */
+.player_admin_reg:hover::after {
+  background-color: #61892F;
+}
+
+
+
+
 @media screen and (max-width: 1000px) {
  .reg_button button {
         margin-top: 20px;
