select&register player

--- a/public_html/css/tournament_lobby.css
+++ b/public_html/css/tournament_lobby.css
@@ -97,7 +97,7 @@
 /*BUTTON*/
 
 .player_admin_reg button {
-    margin-top: 20px;
+    margin-top: 20px;8
     border-radius: 4px;
     border: none;
     color: white;
