select&register player

--- a/public_html/css/tournament_lobby.css
+++ b/public_html/css/tournament_lobby.css
@@ -96,8 +96,8 @@
 
 /*BUTTON*/
 
-.player_admin_reg button {
-    margin-top: 20px;8
+.player_admin_reg_button {
+    margin-top: 20px;
     border-radius: 4px;
     border: none;
     color: white;
