--- a/public_html/css/tournament_lobby.css
+++ b/public_html/css/tournament_lobby.css
@@ -103,7 +103,7 @@
 /*BUTTON*/
 
 .player_admin_reg_button {
-    margin-top: 20px;
+    margin-left: 20px;
     border-radius: 4px;
     border: none;
     color: white;
