--- a/public_html/css/available_tables.css
+++ b/public_html/css/available_tables.css
@@ -162,6 +162,94 @@
 
 
 
+/*CSS for playerRegisterFotm.php*/
+
+/* SELECT FORM STYLING */
+
+.take_yo_tables_box {
+    display: flex;
+    flex-direction: row;
+    width: auto;
+}
+
+.take_yo_tables_select select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  appearance: none;
+  outline: 0;
+  box-shadow: none;
+  border: 0 !important;
+  background: #474B4F;
+  background-image: none;
+}
+/* Remove IE arrow */
+.take_yo_tables_select select::-ms-expand {
+  display: none;
+}
+/* Custom Select */
+.take_yo_tables_select {
+  position: relative;
+  display: flex;
+  line-height: 4;
+  background: #474B4F;
+  overflow: hidden;
+  border-radius: 4px;
+  width: 223px;
+  height: 38px;
+  border-left: 3px solid #61892F;
+  margin-bottom: 20px;
+  padding-left: 3px;
+  align-items: center;
+}
+.take_yo_tables_select select {
+  flex: 1;
+  padding: 0 .5em;
+  color: #fff;
+  cursor: pointer;
+  font-size: 15px;
+}
+/* Arrow */
+.take_yo_tables_select::after {
+  content: '\25BC';
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 0 10px;
+  background: #686D74;
+  cursor: pointer;
+  pointer-events: none;
+  font-size: 11px;
+}
+/* Transition */
+.take_yo_tables_select:hover::after {
+  background-color: #61892F;
+}
+
+
+/*BUTTON*/
+
+.take_yo_tables_button {
+    margin-left: 20px;
+    border-radius: 4px;
+    border: none;
+    color: white;
+    font-size: 15px;
+    text-align: center;
+    width: auto;
+    height: 38px;
+    background-color: #61892F;
+}
+
+
+
+
+@media screen and (max-width: 1000px) {
+
+
+
+
+
 /*MOBILE RESPONSIVE*/
 
 @media screen and (max-width: 1000px) {
