match list responsive

--- a/public_html/css/match_list.css
+++ b/public_html/css/match_list.css
@@ -71,6 +71,11 @@ table.matches_list_table .col-9 {
     }
     .fa-user {
       float: left;
+      margin-right: 5px;
+    }
+    .float_left, .float_right {
+      float: none;
+      text-align: center;
     }
 }
 
