--- a/public_html/css/match_lobby.css
+++ b/public_html/css/match_lobby.css
@@ -3,7 +3,6 @@
 	width: 700px;
 	border-top: 3px solid #61892F;
 	border-radius: 8px;
-	margin-top: 40px;
 }
 .match_lobby_info {
 	padding: 12px;
@@ -98,7 +97,9 @@
     display: flex;
     align-content: flex-start;
 }
-
+.match_margin{
+    height: 40px;
+}
 /*MOBILE RESPNSIVE (VS)*/
 
 @media screen and (max-width: 1000px) {
@@ -202,9 +203,11 @@ table.match_lobby_table .col-5 {
 }
 
 @media screen and (max-width: 1000px) {
+	.match_margin{
+		height: 20px;
+	}
 	.match_lobby {
 		width: 100%;
-		margin-top: 20px;
 	}
 	.match_lobby_framesBreaksPoits_table,
 	.match_lobby_table {
