--- a/public_html/css/bracket.css
+++ b/public_html/css/bracket.css
@@ -181,12 +181,13 @@
 
 @media screen and (max-width: 1000px) {
 	.bracket_section {
-		-webkit-transform: scale(.5);
+	    -webkit-transform: scale(.5);
 	    -webkit-transform-origin: 0 0;
 	    width: 200%;
+	    height: 200%;
 	}
 	.bracket_container{
-		max-height: 500px;
+		max-height: 800px;
 	}
 }
 
