--- a/public_html/css/live_match_lobby.css
+++ b/public_html/css/live_match_lobby.css
@@ -21,6 +21,7 @@ table {
 .live-container {
     text-align: center;
     width: 100%;
+    height: 100%;
     margin: 0 auto;
 }
 /***** INFO SECTION *****/
