--- a/public_html/css/live_match_lobby.css
+++ b/public_html/css/live_match_lobby.css
@@ -42,6 +42,7 @@ table {
 .live-match-lobby-table {
     margin: 0 auto;
     width: 100%;
+    height: 100%;
 }
 .live_logo_img {
     padding: 10px;
