--- a/public_html/css/live_match_lobby.css
+++ b/public_html/css/live_match_lobby.css
@@ -1,8 +1,10 @@
 html, body {
 	font-family: 'Exo 2', sans-serif;
 	background-color: #222629;
-	height: 100%;
-    overflow: auto;
+	min-height: 100%;
+}
+html {
+    height: 100%;
 }
 a {
 	margin: 0px;
