--- a/public_html/css/live_match_lobby.css
+++ b/public_html/css/live_match_lobby.css
@@ -1,10 +1,7 @@
 html, body {
 	font-family: 'Exo 2', sans-serif;
 	background-color: #222629;
-	min-height: 100%;
-}
-html {
-    height: 100%;
+	height: 100%;
 }
 a {
 	margin: 0px;
@@ -25,7 +22,6 @@ table {
     text-align: center;
     width: 100%;
     height: 100%;
-    max-height: 100%;
     margin: 0 auto;
 }
 /***** INFO SECTION *****/
@@ -76,6 +72,7 @@ table {
     border-radius: 8px;
     border-top: 3px solid #61892F;
     text-align: center;
+    width: 100%;
 }
 
 /*VERSUS SECTION*/
