--- a/public_html/css/live_match_lobby.css
+++ b/public_html/css/live_match_lobby.css
@@ -2,6 +2,7 @@ html, body {
 	font-family: 'Exo 2', sans-serif;
 	background-color: #222629;
 	height: 100%;
+    width: 100%;
 }
 a {
 	margin: 0px;
@@ -20,7 +21,7 @@ table {
 }
 .live-container {
     text-align: center;
-    width: 100%;
+    /*width: 100%;*/
     height: 100%;
     margin: 0 auto;
 }
