--- a/public_html/css/live_match_lobby.css
+++ b/public_html/css/live_match_lobby.css
@@ -22,6 +22,7 @@ table {
 .live-container {
     text-align: center;
     width: 100%;
+    max-height: 100%;
     height: 100%;
     margin: 0 auto;
 }
