add margin_top_none class

--- a/public_html/css/lobby_list.css
+++ b/public_html/css/lobby_list.css
@@ -99,7 +99,9 @@
 tr.list-match-lobby-frame-details td {
 	height:20px;
 }
-
+.margin_top_none{
+	margin-top: 0px !important;
+}
 
 /*MOBILE RESPONSIVE*/
 
