--- a/public_html/css/player_profile.css
+++ b/public_html/css/player_profile.css
@@ -223,7 +223,8 @@
         box-shadow: 0px 3px 10px #131617;
     }
     .player_profile_circle .fa-trophy,
-    .player_profile_circle .fa-shield-alt {
+    .player_profile_circle .fa-shield-alt,
+    .player_profile_circle .fa-user-friends {
         font-size: 33px;
         margin-top: 22px;
         margin-bottom: 10px;
