--- a/public_html/css/containers.css
+++ b/public_html/css/containers.css
@@ -79,8 +79,8 @@
 
 
 
-.list_table thead th,
-.list_table_700 thead th {
+.list_table thead,
+.list_table_700 thead {
 	background-color: #222629;
     text-transform: uppercase;
     padding: 15px;
