--- a/public_html/css/participants.css
+++ b/public_html/css/participants.css
@@ -85,7 +85,8 @@ table.participants_table .col-6 {
 }
 .participants_table tbody tr>:nth-child(1),
 .participants_table tbody tr>:nth-child(2), {
-	border: none;
+	border-right: none;
+	border-left: none;
 }
 .participants_table {
 	width: 100% !important;
