--- a/public_html/css/participants.css
+++ b/public_html/css/participants.css
@@ -84,9 +84,8 @@ table.participants_table .col-6 {
  	width: 9%;
 }
 .participants_table tbody tr>:nth-child(1),
-.participants_table tbody tr>:nth-child(2), {
-	border-right: none;
-	border-left: none;
+.participants_table tbody tr>:nth-child(2) {
+	border: none !important;
 }
 .participants_table {
 	width: 100% !important;
