--- a/public_html/css/tournament_lobby.css
+++ b/public_html/css/tournament_lobby.css
@@ -1,6 +1,6 @@
 .reg_button {
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
 }
 .reg_button button {
     border-radius: 4px;
