--- a/public_html/css/admin_description.css
+++ b/public_html/css/admin_description.css
@@ -1,5 +1,6 @@
 .form_reglament {
-	width: 100%;
+	margin: 0 auto;
+	width: 700px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -8,6 +9,8 @@
 .reglament {
 	width: 100%;
 	min-height: 200px;
+	overflow: scroll;
+	padding: 20px;
 }
 
  .b_reglament {
