--- a/public_html/css/description.css
+++ b/public_html/css/description.css
@@ -4,9 +4,9 @@
 	text-align: right;
 	overflow-x: auto;
 	padding: 20px;
-	outline: 3px solid #61892F;
+	outline: none;
 	border-radius: 8px;
-	border: none;
+	border-top: 3px solid #61892F;
 	background-color: #3f454c;
 	display: inline-block;
     float: left;
