--- a/public_html/css/admin_description.css
+++ b/public_html/css/admin_description.css
@@ -16,7 +16,7 @@
 	border-radius: 8px;
 	border: none;
 	background-color: #3f454c;
-	display: inline-block;
+	display: block;
     float: left;
     clear: left;
     text-align: left;
