--- a/public_html/css/description.css
+++ b/public_html/css/description.css
@@ -7,6 +7,7 @@
 	outline: none;
 	border-radius: 8px;
 	border-top: 3px solid #61892F;
+	border: none;
 	background-color: #3f454c;
 	display: block;
     float: left;
