--- a/public_html/css/description.css
+++ b/public_html/css/description.css
@@ -1,31 +1,30 @@
 .reglament_box {
+	margin: 0 auto;
 	width: 700px;
-	overflow: auto;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	border-radius: 8px;
 }
 
 .reglament_text {
 	width: 100%;
-	height: auto;
-	overflow-x: hidden;
+	min-height: 300px;
+	overflow-x: auto;
 	padding: 20px;
 	outline: none;
 	border-radius: 8px;
-	border-top: 3px solid #61892F;
-	border-right: none;
-	border-bottom: none;
-	border-left: none;
+	border: none;
 	background-color: #3f454c;
+	display: block;
     float: left;
     clear: left;
     text-align: left;
-	  white-space: wrap;
+    white-space: wrap;
 }
 
 @media screen and (max-width: 1000px) {
-	.reglament_text {
-		width: 100%;
-  		overflow-x: auto;
-	}
+
 	.reglament_box {
 	width: 100%;
 	}
