--- a/public_html/css/description.css
+++ b/public_html/css/description.css
@@ -16,12 +16,11 @@
 	border-radius: 8px;
 	border: none;
 	background-color: #3f454c;
-	display: block;
+	display: inline-block;
     float: left;
     clear: left;
     text-align: left;
     white-space: wrap;
-    color: white !important;
     opacity: 1;
 }
 
