--- a/public_html/css/description.css
+++ b/public_html/css/description.css
@@ -1,9 +1,6 @@
 .reglament_box {
 	margin: 0 auto;
 	width: 700px;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
 	border-radius: 8px;
 }
 
@@ -20,7 +17,7 @@
     float: left;
     clear: left;
     text-align: left;
-    white-space: wrap;
+    /*white-space: wrap;*/
     opacity: 1;
 }
 
