--- a/public_html/css/description.css
+++ b/public_html/css/description.css
@@ -1,3 +1,6 @@
+.section_header_regl {
+	width: 100%;
+}
 .reglament_box {
 	margin: 0 auto;
 	width: 100%;
@@ -6,7 +9,7 @@
 
 .reglament_text {
 	width: 100%;
-	height: 1000px;
+	height: 1300px;
 	overflow: hidden;
 	padding: 20px;
 	outline: none;
