--- a/public_html/css/description.css
+++ b/public_html/css/description.css
@@ -9,8 +9,9 @@
 
 .reglament_text {
 	width: 100%;
-	height: 2500px;
-	overflow: hidden;
+	height: 2400px;
+	overflow-x: hidden;
+	overflow-y: auto;
 	padding: 20px;
 	outline: none;
 	border-radius: 8px;
